namespace Chat.Common.Models;

public class CollectionName {
	public const string ROOMS = "rooms";
	public const string USERS = "users";
	public const string MESSAGES = "messages";
	public const string TOKENS = "tokens";
}
